# libsolv-feedstock

./: .recipe_maintainers.json  .travis.yml  README.md  conda-forge.yml  pixi.toml
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-win.yml
.ci_support/: linux_.yaml  linux_64_.yaml  linux_aarch64_.yaml  linux_ppc64le_.yaml  osx_.yaml  osx_64_.yaml  osx_arm64_.yaml  win_.yaml  win_64_.yaml  win_arm64_.yaml  win_c_compilervs2015cxx_compilervs2015vc14.yaml
.github/: CODEOWNERS
.scripts/: build_steps.sh  run_osx_build.sh
recipe/: 0001-Feature-depriorization-first.patch  0001-de-prioritize-track_features-conda.patch  0002-win32-shared.patch  add-missing-headers.patch  add_better_conda_trackfeatures_depriorization.patch  add_conda_timestamp_maximization.patch  add_strict_repo_prio_rule.patch  bld.bat  build.sh  build_libsolv.bat  build_libsolv.sh  conda_build_config.yaml  conda_variant_priorization.patch  do_not_prune_future_installed.patch  enable_subprio_comparison.patch  export_solv_version_win.patch  fix_osx_rpath.patch  fix_startswith_pep404.patch  header_win.patch  install.bat  install.sh  libsolv-conda_variant_priorization-build_number.patch  meta.yaml  msvc_support.patch  no_error_subdir_mismatch.patch  pcre2-compat.patch  recipe.yaml  remove_installname.patch  win_export_and_static_build.patch
recipe/test/: CMakeLists.txt  test.c
